# hgal

./: Makefile  README  README.md  hgal.cabal
Data/Graph/: Automorphism.hs  Construction.hs  Partition.hs  Permutation.hs
tests/: Bench.hs  Main.hs  Shuffle.hs  Sudoku.hs
